--- a/index.html
+++ b/index.html
@@ -5,33 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telegram Redirect</title>
     <script>
-        // Функция для получения параметра из URL
         function getParameter() {
-            const queryString = window.location.search; // Получаем часть URL после "?"
-            const params = new URLSearchParams(queryString); // Парсим параметры
-            return params.get('redirect'); // Получаем значение параметра "redirect"
-        }
+            const queryString = window.location.search; 
+            const params = new URLSearchParams(queryString);
+            return params.get('redirect');
 
-        // Функция для перенаправления в зависимости от параметра
         function redirectToTelegram() {
             const param = getParameter();
 
-            // Определяем ссылки для перенаправления
             const links = {
-                'chat': 'https://t.me/CoyoteWatchChat',    // Ссылка на чат
-                'channel': 'https://t.me/CoyoteWatch',      // Ссылка на канал
-                'bot': 'https://t.me/CoyoteWatch_bot'       // Ссылка на бота
+                'chat': 'https://t.me/CoyoteWatchChat',
+                'channel': 'https://t.me/CoyoteWatch',
+                'bot': 'https://t.me/CoyoteWatch_bot'
             };
 
-            // Проверяем, есть ли параметр в объекте links
             if (links[param]) {
-                window.location.href = links[param]; // Перенаправляем на соответствующую ссылку
+                window.location.href = links[param];
             } else {
                 document.getElementById('message').innerText = 'Страница не найдена';
             }
         }
 
-        // Вызываем функцию перенаправления при загрузке страницы
         window.onload = redirectToTelegram;
     </script>
 </head>
