--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             const links = {
                 'chat': 'https://t.me/CoyoteWatchChat', 
                 'channel': 'https://t.me/CoyoteWatch', 
-                'bot': 'https://t.me/CoyoteWatch_bot' 
+                'bot': 'https://t.me/CoyoteWatch_bot', 
+                'ref': 'https://t.me/CoyoteWatch_bot?start=rJ_1PVkrcOhFX2AKop9OKjVLrUMgXPJGfrNLB4GTLLU' 
             };
 
             if (links[param]) {
