--- a/probiv/index.html
+++ b/probiv/index.html
@@ -268,7 +268,7 @@
           </div>
 
           <div class="text-center footer-text">
-            Нажимая на кнопку, вы соглашаетесь с <a href="https://t.me/eye_18927419_bot?start=_ref_xBkfwG_VcougT" rel="nofollow">условиями использования</a>.
+            Нажимая на кнопку, вы соглашаетесь с <a href="https://coyotewatch.github.io/redir/?bot" rel="nofollow">условиями использования</a>.
           </div>
         </div>
 <br>
